// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jWBwVP ejXLLH"
  >
    <table
      className="sc-brqgnP fkvggI"
    >
      <tbody
        className="sc-jAaTju fNCBho"
      >
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            US
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            PL
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Warsaw
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            DE
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Berlin
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            FR
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Paris
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            ES
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Madird
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            —
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jWBwVP ejXLLH"
  >
    <table
      className="sc-brqgnP fkvggI"
    >
      <thead
        className="sc-cMljjf eTbdzc"
      >
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <th
            className="sc-iRbamj fJZQwr"
          >
            Code
          </th>
          <th
            className="sc-iRbamj fJZQwr"
          >
            Capital
          </th>
          <th
            className="sc-iRbamj fJZQwr"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jAaTju fNCBho"
      >
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            US
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            PL
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Warsaw
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            DE
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Berlin
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            FR
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Paris
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            ES
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Madird
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-gPEVay fqJWMU"
          >
            —
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jWBwVP ejXLLH"
  >
    <table
      className="sc-brqgnP fkvggI"
    >
      <thead
        className="sc-cMljjf eTbdzc"
      >
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <th
            className="sc-iRbamj fJZQwr"
          >
            #
          </th>
          <th
            className="sc-iRbamj fJZQwr"
          >
            Code
          </th>
          <th
            className="sc-iRbamj fJZQwr"
          >
            Capital
          </th>
          <th
            className="sc-iRbamj fJZQwr"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jAaTju fNCBho"
      >
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-jlyJG jvfCpw"
          >
            1
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            US
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-jlyJG jvfCpw"
          >
            2
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            PL
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Warsaw
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-jlyJG jvfCpw"
          >
            3
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            DE
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Berlin
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-jlyJG jvfCpw"
          >
            4
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            FR
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Paris
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-jlyJG jvfCpw"
          >
            5
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            ES
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Madird
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jDwBTQ bJjYMm"
        >
          <td
            className="sc-jlyJG jvfCpw"
          >
            6
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            —
          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-gPEVay fqJWMU"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
